--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: cpp
 cache: ccache
 sudo: required
 dist: trusty
+services:
+  - docker
 os:
   - linux
 env:
@@ -16,8 +18,13 @@ addons:
       - python2.7-dev
 before_install:
   -  pip install -U virtualenv pre-commit pip
+  -  docker pull paddlepaddle/paddle:latest
 script:
   -  .travis/precommit.sh
+  -  docker run -i --rm -v "$PWD:/py_unittest" paddlepaddle/paddle:latest /bin/bash -c
+     "cd /py_unittest && find . -name 'tests' -type d -print0 | xargs -0 -I{} -n1 bash -c 'cd {};
+     python -m unittest discover -v'"
+
 notifications:
   email:
     on_success: change
