--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "fluid/PaddleNLP/LAC"]
-	path = fluid/PaddleNLP/LAC
+[submodule "PaddleNLP/LAC"]
+	path = PaddleNLP/LAC
 	url = https://github.com/baidu/lac.git
-[submodule "fluid/PaddleNLP/SimNet"]
-	path = fluid/PaddleNLP/SimNet
+[submodule "PaddleNLP/SimNet"]
+	path = PaddleNLP/SimNet
 	url = https://github.com/baidu/AnyQ.git
-[submodule "fluid/PaddleNLP/Senta"]
-	path = fluid/PaddleNLP/Senta
+[submodule "PaddleNLP/Senta"]
+	path = PaddleNLP/Senta
 	url = https://github.com/baidu/Senta.git
