--- a/PaddleCV/PaddleDetection/configs/obj365/cascade_rcnn_dcnv2_se154_vd_fpn_gn.yml
+++ b/PaddleCV/PaddleDetection/configs/obj365/cascade_rcnn_dcnv2_se154_vd_fpn_gn.yml
@@ -8,7 +8,7 @@ use_gpu: true
 log_iter: 20
 log_smooth_window: 20
 save_dir: output
-pretrain_weights: 
+pretrain_weights: https://paddlemodels.bj.bcebos.com/object_detection/cascade_mask_rcnn_dcnv2_se154_vd_fpn_gn_coco_pretrained.tar
 weights: output/cascade_rcnn_dcnv2_se154_vd_fpn_gn/model_final
 metric: COCO
 num_classes: 81
