--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "PaddleNLP/language_representations_kit/ERNIE"]
-	path = PaddleNLP/language_representations_kit/ERNIE
-	url = https://github.com/PaddlePaddle/ERNIE
 [submodule "PaddleRL"]
 	path = PaddleRL
 	url = https://github.com/PaddlePaddle/PARL
@@ -10,3 +7,6 @@
 [submodule "AutoDL"]
 	path = AutoDL
 	url = https://github.com/PaddlePaddle/AutoDL.git
+[submodule "PaddleNLP/PaddleLARK/ERNIE"]
+	path = PaddleNLP/PaddleLARK/ERNIE
+	url = https://github.com/PaddlePaddle/ERNIE.git
