--- a/PaddleCV/PaddleDetection/configs/yolov3_darknet_voc.yml
+++ b/PaddleCV/PaddleDetection/configs/yolov3_darknet_voc.yml
@@ -62,7 +62,7 @@ YoloTrainFeed:
   batch_size: 8
   dataset:
     dataset_dir: dataset/voc
-    annotation: train.txt
+    annotation: trainval.txt
     use_default_label: true
   num_workers: 8
   bufsize: 128
@@ -74,7 +74,7 @@ YoloEvalFeed:
   image_shape: [3, 608, 608]
   dataset:
     dataset_dir: dataset/voc
-    annotation: val.txt
+    annotation: test.txt
     use_default_label: true
 
 YoloTestFeed:
