--- a/PaddleCV/PaddleDetection/configs/ssd/ssd_vgg16_300_voc.yml
+++ b/PaddleCV/PaddleDetection/configs/ssd/ssd_vgg16_300_voc.yml
@@ -64,7 +64,7 @@ SSDTrainFeed:
   batch_size: 8
   dataset:
     dataset_dir: dataset/voc
-    annotation: train.txt
+    annotation: trainval.txt
     use_default_label: true
   image_shape: [3, 300, 300]
   sample_transforms:
@@ -108,7 +108,7 @@ SSDEvalFeed:
   batch_size: 32
   dataset:
     dataset_dir: dataset/voc
-    annotation: val.txt
+    annotation: test.txt
     use_default_label: true
   drop_last: false
   image_shape: [3, 300, 300]
