--- a/PaddleCV/PaddleDetection/configs/ssd/ssd_vgg16_512_voc.yml
+++ b/PaddleCV/PaddleDetection/configs/ssd/ssd_vgg16_512_voc.yml
@@ -68,7 +68,7 @@ SSDTrainFeed:
   batch_size: 8
   dataset:
     dataset_dir: dataset/voc
-    annotation: train.txt
+    annotation: trainval.txt
     use_default_label: true
   image_shape: [3, 512, 512]
   sample_transforms:
@@ -112,7 +112,7 @@ SSDEvalFeed:
   batch_size: 32
   dataset:
     dataset_dir: dataset/voc
-    annotation: val.txt
+    annotation: test.txt
     use_default_label: true
   drop_last: false
   image_shape: [3, 512, 512]
