--- a/PaddleCV/PaddleDetection/configs/yolov3_mobilenet_v1_fruit.yml
+++ b/PaddleCV/PaddleDetection/configs/yolov3_mobilenet_v1_fruit.yml
@@ -64,8 +64,8 @@ YoloTrainFeed:
   batch_size: 1
   dataset:
     dataset_dir: dataset/fruit/fruit-detection
-    annotation: ./ImageSets/Main/train.txt
-    image_dir: ./JPEGImages
+    annotation: trainval.txt
+    # image_dir: ./JPEGImages
     use_default_label: false
   num_workers: 16
   bufsize: 128
@@ -111,8 +111,8 @@ YoloEvalFeed:
   image_shape: [3, 608, 608]
   dataset:
     dataset_dir: dataset/fruit/fruit-detection
-    annotation: ./ImageSets/Main/val.txt
-    image_dir: ./JPEGImages
+    annotation: test.txt
+    # image_dir: ./JPEGImages
     use_default_label: false
  
 
@@ -121,5 +121,5 @@ YoloTestFeed:
   image_shape: [3, 608, 608]
   dataset:
     dataset_dir: dataset/fruit/fruit-detection
-    annotation: ./ImageSets/Main/label_list.txt
+    # annotation: ./ImageSets/Main/label_list.txt
     use_default_label: false
