--- a/PaddleCV/PaddleDetection/configs/yolov3_darknet_voc.yml
+++ b/PaddleCV/PaddleDetection/configs/yolov3_darknet_voc.yml
@@ -62,8 +62,7 @@ YoloTrainFeed:
   batch_size: 8
   dataset:
     dataset_dir: dataset/voc
-    annotation: VOCdevkit/VOC_all/ImageSets/Main/train.txt
-    image_dir: VOCdevkit/VOC_all/JPEGImages
+    annotation: trainval.txt
     use_default_label: true
   num_workers: 8
   bufsize: 128
@@ -75,8 +74,7 @@ YoloEvalFeed:
   image_shape: [3, 608, 608]
   dataset:
     dataset_dir: dataset/voc
-    annotation: VOCdevkit/VOC_all/ImageSets/Main/val.txt
-    image_dir: VOCdevkit/VOC_all/JPEGImages
+    annotation: test.txt
     use_default_label: true
 
 YoloTestFeed:
