--- a/PaddleCV/PaddleDetection/configs/yolov3_mobilenet_v1_fruit.yml
+++ b/PaddleCV/PaddleDetection/configs/yolov3_mobilenet_v1_fruit.yml
@@ -63,7 +63,7 @@ OptimizerBuilder:
 YoloTrainFeed:
   batch_size: 1
   dataset:
-    dataset_dir: dataset/fruit/fruit-detection
+    dataset_dir: dataset/fruit
     annotation: train.txt
     use_default_label: false
   num_workers: 16
@@ -109,7 +109,7 @@ YoloEvalFeed:
   batch_size: 1
   image_shape: [3, 608, 608]
   dataset:
-    dataset_dir: dataset/fruit/fruit-detection
+    dataset_dir: dataset/fruit
     annotation: val.txt
     use_default_label: false
  
@@ -118,5 +118,5 @@ YoloTestFeed:
   batch_size: 1
   image_shape: [3, 608, 608]
   dataset:
-    dataset_dir: dataset/fruit/fruit-detection
+    dataset_dir: dataset/fruit
     use_default_label: false
