--- a/PaddleCV/PaddleDetection/configs/yolov3_mobilenet_v1_fruit.yml
+++ b/PaddleCV/PaddleDetection/configs/yolov3_mobilenet_v1_fruit.yml
@@ -64,7 +64,7 @@ YoloTrainFeed:
   batch_size: 1
   dataset:
     dataset_dir: dataset/fruit
-    annotation: train.txt
+    annotation: fruit-detection/train.txt
     use_default_label: false
   num_workers: 16
   bufsize: 128
@@ -110,7 +110,7 @@ YoloEvalFeed:
   image_shape: [3, 608, 608]
   dataset:
     dataset_dir: dataset/fruit
-    annotation: val.txt
+    annotation: fruit-detection/val.txt
     use_default_label: false
  
 
