sync classification dir from release/1.6 test=develop

--- a/PaddleSlim/classification/distillation/configs/mobilenetv1_resnet50_distillation.yaml
+++ b/PaddleSlim/classification/distillation/configs/mobilenetv1_resnet50_distillation.yaml
@@ -1,5 +1,10 @@
 version: 1.0
 distillers:
+    fsp_distiller:
+        class: 'FSPDistiller'
+        teacher_pairs: [['res50_res2a_branch2a.conv2d.output.1.tmp_0', 'res50_res3a_branch2a.conv2d.output.1.tmp_0']]
+        student_pairs: [['depthwise_conv2d_1.tmp_0', 'depthwise_conv2d_2.tmp_0']]
+        distillation_loss_weight: 1
     l2_distiller:
         class: 'L2Distiller'
         teacher_feature_map: 'res50_fc_0.tmp_0'
@@ -8,7 +13,7 @@ distillers:
 strategies:
     distillation_strategy:
         class: 'DistillationStrategy'
-        distillers: ['l2_distiller']
+        distillers: ['fsp_distiller', 'l2_distiller']
         start_epoch: 0
         end_epoch: 130
 compressor:
