Change checkpoint path in pruning demo.

--- a/PaddleSlim/classification/pruning/configs/mobilenet_v2.yaml
+++ b/PaddleSlim/classification/pruning/configs/mobilenet_v2.yaml
@@ -17,6 +17,6 @@ strategies:
 #        pruned_params: '.*expand_weights'
 compressor:
     epoch: 241
-    checkpoint_path: './checkpoints/'
+    checkpoint_path: './checkpoints/mobilenet_v2'
     strategies:
         - uniform_pruning_strategy
