--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "PaddleCV/PointRCNN/pybind11"]
 	path = PaddleCV/PointRCNN/pybind11
 	url = https://github.com/pybind/pybind11/tree/stable
+[submodule "PaddleCV/Paddle3D/PointRCNN/pybind11"]
+	path = PaddleCV/Paddle3D/PointRCNN/pybind11
+	url = https://github.com/pybind/pybind11
