refine kitti_eval

--- a/PaddleCV/Paddle3D/PointRCNN/.gitignore
+++ b/PaddleCV/Paddle3D/PointRCNN/.gitignore
@@ -6,6 +6,7 @@ result_dir
 pp_pointrcnn*
 data/gt_database
 utils/pts_utils/dist
+utils/pts_utils/build
 utils/pts_utils/pts_utils.egg-info
 utils/cyops/*.c
 utils/cyops/*.so
