Cleanup paddle speech

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	path = PaddleCV/PaddleDetection
 	url = https://github.com/PaddlePaddle/PaddleDetection.git
 	branch = release/0.2
+[submodule "PaddleSpeech/Parakeet"]
+	path = PaddleSpeech/Parakeet
+	url = https://github.com/PaddlePaddle/Parakeet
