update image segmentation docs

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "PaddleCV/PaddleSeg"]
 	path = PaddleCV/PaddleSeg
 	url = https://github.com/PaddlePaddle/PaddleSeg
+	branch = release/v0.4.0
 [submodule "AutoDL"]
 	path = AutoDL
 	url = https://github.com/PaddlePaddle/AutoDL.git
