update image segmentation docs (#4458)
* update image segmentation document
* Update README.md
* update image segmentation docs

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/PaddlePaddle/PARL
 [submodule "PaddleCV/PaddleSeg"]
 	path = PaddleCV/PaddleSeg
-	url = https://github.com/PaddlePaddle/PaddleSeg
+	url = https://github.com/PaddlePaddle/PaddleSeg.git
 [submodule "AutoDL"]
 	path = AutoDL
 	url = https://github.com/PaddlePaddle/AutoDL.git
