--- a/dygraph/bmn/bmn.yaml
+++ b/dygraph/bmn/bmn.yaml
@@ -6,8 +6,8 @@ MODEL:
   prop_boundary_ratio: 0.5
   num_sample: 32
   num_sample_perbin: 3
-  anno_file: "../../PaddleCV/video/data/dataset/bmn/activitynet_1.3_annotations.json"
-  feat_path: './fix_feat_100'
+  anno_file: "./activitynet_1.3_annotations.json"
+  feat_path: "./fix_feat_100"
 
 TRAIN:
   subset: "train"
