update api to 1.8 for transformer and similarity_net, test=develop

--- a/dygraph/transformer/transformer.yaml
+++ b/dygraph/transformer/transformer.yaml
@@ -40,7 +40,7 @@ pool_size: 200000
 sort_type: "pool"
 shuffle: True
 shuffle_batch: True
-batch_size: 4096
+batch_size: 1 #4096
 
 # Hyparams for training:
 # the number of epoches for training
