--- a/dygraph/tsn/tsn.yaml
+++ b/dygraph/tsn/tsn.yaml
@@ -1,6 +1,6 @@
 MODEL:
     name: "TSN"
-    format: "video"
+    format: "frames"
     num_classes: 101
     seg_num: 3
     seglen: 1
@@ -18,7 +18,7 @@ TRAIN:
     batch_size: 128
     use_gpu: True
     num_gpus: 4 #8
-    filelist: "./data/dataset/ucf101/ucf101_train_split_1_videos.txt"
+    filelist: "./data/dataset/ucf101/ucf101_train_split_1_rawframes.txt"
     learning_rate: 0.001
     learning_rate_decay: 0.1
     decay_epochs: [30, 60]
@@ -32,7 +32,7 @@ VALID:
     num_reader_threads: 12
     buf_size: 1024
     batch_size: 128
-    filelist: "./data/dataset/ucf101/ucf101_val_split_1_videos.txt"
+    filelist: "./data/dataset/ucf101/ucf101_val_split_1_rawframes.txt"
 
 TEST:
     short_size: 256
@@ -40,4 +40,4 @@ TEST:
     num_reader_threads: 12
     buf_size: 1024
     batch_size: 64
-    filelist: "./data/dataset/ucf101/ucf101_val_split_1_videos.txt"
+    filelist: "./data/dataset/ucf101/ucf101_val_split_1_rawframes.txt"
