--- a/dygraph/tsn/multi_tsn.yaml
+++ b/dygraph/tsn/multi_tsn.yaml
@@ -15,7 +15,7 @@ TRAIN:
     target_size: 224
     num_reader_threads: 12
     buf_size: 1024
-    batch_size: 256
+    batch_size: 128
     use_gpu: True
     filelist: "./data/dataset/ucf101/ucf101_train_split_1_rawframes.txt"
     learning_rate: 0.001
@@ -23,7 +23,7 @@ TRAIN:
     decay_epochs: [30, 60]
     l2_weight_decay: 1e-4
     momentum: 0.9
-    total_videos: 9738 #239781
+    total_videos: 9738 
 
 VALID:
     short_size: 256
