--- a/dygraph/bmn/bmn.yaml
+++ b/dygraph/bmn/bmn.yaml
@@ -12,10 +12,11 @@ MODEL:
 TRAIN:
   subset: "train"
   epoch: 9
-  batch_size: 4
-  num_threads: 8
   use_gpu: True
   num_gpus: 4
+  batch_size: 16
+  num_workers: 4
+  use_shuffle: True
   learning_rate: 0.001
   learning_rate_decay: 0.1
   lr_decay_iter: 4200
@@ -23,15 +24,14 @@ TRAIN:
 
 VALID:
   subset: "validation"
-  batch_size: 4
-  num_threads: 8
-  use_gpu: True
   num_gpus: 4
+  batch_size: 16
+  num_workers: 4
 
 TEST:
   subset: "validation"
   batch_size: 1
-  num_threads: 1
+  num_workers: 4
   snms_alpha: 0.001
   snms_t1: 0.5
   snms_t2: 0.9
@@ -41,7 +41,7 @@ TEST:
 INFER:
   subset: "test"
   batch_size: 1
-  num_threads: 1
+  num_workers: 4
   snms_alpha: 0.4
   snms_t1: 0.5
   snms_t2: 0.9
