--- a/PaddleCV/video/application/video_tag/data/dataset/tsn/infer.list.example
+++ b/PaddleCV/video/application/video_tag/data/dataset/tsn/infer.list.example
@@ -1,4 +1,5 @@
-/workspace/ssd2/liuchao_temp/ucf101/videos/ApplyEyeMakeup/v_ApplyEyeMakeup_g08_c01.avi 0
-/workspace/ssd2/liuchao_temp/ucf101/videos/ApplyEyeMakeup/v_ApplyEyeMakeup_g08_c02.avi 0
-/workspace/ssd2/liuchao_temp/ucf101/videos/ApplyEyeMakeup/v_ApplyEyeMakeup_g08_c03.avi 0
-/workspace/ssd2/liuchao_temp/ucf101/videos/ApplyEyeMakeup/v_ApplyEyeMakeup_g08_c04.avi 0
+data/mp4/1.mp4
+data/mp4/2.mp4
+data/mp4/3.mp4
+data/mp4/4.mp4
+data/mp4/5.mp4
