--- a/PaddleNLP/examples/machine_translation/transformer/configs/transformer.big.yaml
+++ b/PaddleNLP/examples/machine_translation/transformer/configs/transformer.big.yaml
@@ -10,22 +10,10 @@ init_from_pretrain_model: ""
 init_from_params: "./trained_models/step_final/"
 # The directory for saving model
 save_model: "trained_models"
-# The directory for saving inference model.
-inference_model_dir: "infer_model"
 # Set seed for CE or debug
 random_seed: None
-# The pattern to match training data files.
-training_file: "gen_data/wmt14_ende_data_bpe/train.tok.clean.bpe.33708.en-de"
-# The pattern to match validation data files.
-validation_file: "gen_data/wmt14_ende_data_bpe/newstest2013.tok.bpe.33708.en-de"
-# The pattern to match test data files.
-predict_file: "gen_data/wmt14_ende_data_bpe/newstest2014.tok.bpe.33708.en-de"
 # The file to output the translation results of predict_file to.
 output_file: "predict.txt"
-# The path of vocabulary file of source language.
-src_vocab_fpath: "gen_data/wmt14_ende_data_bpe/vocab_all.bpe.33708"
-# The path of vocabulary file of target language.
-trg_vocab_fpath: "gen_data/wmt14_ende_data_bpe/vocab_all.bpe.33708"
 # The <bos>, <eos> and <unk> tokens in the dictionary.
 special_token: ["<s>", "<e>", "<unk>"]
 # The directory to store data.
@@ -35,14 +23,10 @@ root: None
 use_gpu: True
 
 # Args for reader, see reader.py for details
-token_delimiter: " "
-use_token_batch: True
 pool_size: 200000
-sort_type: "global"
-shuffle: True
-shuffle_batch: True
+sort_type: "pool"
 batch_size: 4096
-infer_batch_size: 16
+infer_batch_size: 8
 
 # Hyparams for training:
 # The number of epoches for training
